# ChangeLog for app-portage/portage-manpages
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/portage-manpages/ChangeLog,v 1.9 2006/10/17 08:57:46 uberlord Exp $

  17 Oct 2006; Roy Marples <uberlord@gentoo.org>
  portage-manpages-20060913.ebuild:
  Added ~sparc-fbsd keyword.

*portage-manpages-20060913 (14 Sep 2006)

  14 Sep 2006; Mike Frysinger <vapier@gentoo.org>
  +portage-manpages-20060913.ebuild:
  Version bump.

*portage-manpages-1.2 (31 Dec 2005)

  31 Dec 2005; Mike Frysinger <vapier@gentoo.org>
  +portage-manpages-1.2.ebuild:
  Version bump.

*portage-manpages-1.1 (01 Jan 2005)

  01 Jan 2005; Mike Frysinger <vapier@gentoo.org>
  -portage-manpages-1.0.ebuild, +portage-manpages-1.1.ebuild:
  Version bump.

*portage-manpages-1.0 (05 Dec 2004)

  05 Dec 2004; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by me.