@@ -1,12 +1,17 @@
 DIST portage-manpages-20060913.tar.bz2 19703 RMD160 0ddf2ce05894ba69e4dfdb8170a4d6db439a29b9 SHA1 60323abe782b9f2e4706bcd7a45019deb80132c5 SHA256 e4750e857a06e9b7aec2dcc16db1e2d4e66b1f140ba8319914d3256feb194090
-EBUILD portage-manpages-20060913.ebuild 533 RMD160 532c4776ab1bf1880322d65c155bf4b78948554b SHA1 4c859d4878e2bd6a2411bfcc0510dc6ab90680f8 SHA256 e7b7fc482a627ded5468b3614979c6add8d611a5d096c1d056f93407637c69ea
-MD5 6182db6a425349919e4e8a0362e7d127 portage-manpages-20060913.ebuild 533
-RMD160 532c4776ab1bf1880322d65c155bf4b78948554b portage-manpages-20060913.ebuild 533
-SHA256 e7b7fc482a627ded5468b3614979c6add8d611a5d096c1d056f93407637c69ea portage-manpages-20060913.ebuild 533
-MISC ChangeLog 926 RMD160 e335e1e8c7a93b739041ed4fc1466102b26ab38c SHA1 67a7b07bd038f077f58c0838c3bd6efbed8dbdc3 SHA256 0452d9f98b33a8c0b51a983455d0d3b2298dea4da510882009b156dfecaf1c10
-MD5 b6adc12b3b3be9a5bd962f628a69582f ChangeLog 926
-RMD160 e335e1e8c7a93b739041ed4fc1466102b26ab38c ChangeLog 926
-SHA256 0452d9f98b33a8c0b51a983455d0d3b2298dea4da510882009b156dfecaf1c10 ChangeLog 926
+DIST portage-manpages-20070122.tar.bz2 22311 RMD160 bdda3d0d12a7a1adea5c9ef89ea0c71d6ee1a9b9 SHA1 8690c4ab6da442591856e5554e8435ee7274493a SHA256 59471abc397ff36d4b751d56be92e188bc0418f43bb90109a907c6f7e412ddf7
+EBUILD portage-manpages-20060913.ebuild 532 RMD160 85cfbe7021d82b018ae399939db32e5b14142153 SHA1 237443b962ef9a52bfe8aac821cc21b19fd72e02 SHA256 5898e6608770ba01dcce0e3fd09a7d9c2528ecc9275455bf02bd9115fafa641d
+MD5 0e2425f92716e55108e9acf0f4f88ba2 portage-manpages-20060913.ebuild 532
+RMD160 85cfbe7021d82b018ae399939db32e5b14142153 portage-manpages-20060913.ebuild 532
+SHA256 5898e6608770ba01dcce0e3fd09a7d9c2528ecc9275455bf02bd9115fafa641d portage-manpages-20060913.ebuild 532
+EBUILD portage-manpages-20070122.ebuild 538 RMD160 401b55fdcabec63eabbf18e6eae67c7899c1599b SHA1 c45cbc0837827d27633aee761149077a1b18f7f2 SHA256 992933277b635138df717e4cc443317a1ff2f0b68ece3dfc9ca7e3c35e045226
+MD5 5d492f49010aabbf0cb067dfddbc77be portage-manpages-20070122.ebuild 538
+RMD160 401b55fdcabec63eabbf18e6eae67c7899c1599b portage-manpages-20070122.ebuild 538
+SHA256 992933277b635138df717e4cc443317a1ff2f0b68ece3dfc9ca7e3c35e045226 portage-manpages-20070122.ebuild 538
+MISC ChangeLog 1098 RMD160 f3fab5c1745f826d5564a0a581e7663a207a553b SHA1 cf69044bf3e16282826bf0b043cc2f8e76157731 SHA256 96cb9b90ba5e8af94e355f5c7c354ff9f3bc5b18f92698a8ac1a35acf7eeb194
+MD5 0417a01feb2f44991520d914d7e0625c ChangeLog 1098
+RMD160 f3fab5c1745f826d5564a0a581e7663a207a553b ChangeLog 1098
+SHA256 96cb9b90ba5e8af94e355f5c7c354ff9f3bc5b18f92698a8ac1a35acf7eeb194 ChangeLog 1098
 MISC metadata.xml 200 RMD160 e618972986cf2dd6c8d0cdf2248299f3a5bd2dc9 SHA1 289d5d94a8c473ae8e9d0c671becbbfbf336c55f SHA256 eb63f2affd0b8e3f5149df2f2f964910eb2127b650919a9e7892fae011e2b22b
 MD5 f97af7d1a35411666ebb1dd880419cf5 metadata.xml 200
 RMD160 e618972986cf2dd6c8d0cdf2248299f3a5bd2dc9 metadata.xml 200
@@ -14,3 +19,6 @@ SHA256 eb63f2affd0b8e3f5149df2f2f964910eb2127b650919a9e7892fae011e2b22b metadata
 MD5 47eb87f4d9c1d6b10c06f67b3b4d08b5 files/digest-portage-manpages-20060913 277
 RMD160 cc3d8cdfee874d1192d36d3dc049a2e29632d418 files/digest-portage-manpages-20060913 277
 SHA256 3b3f83f18087b1041b4c371d557d587206f4f2139e70f041a07de2d570578eca files/digest-portage-manpages-20060913 277
+MD5 8d96eea429d29b983376737dfe4a45b3 files/digest-portage-manpages-20070122 277
+RMD160 88b8d749666eb4293f0c34c0267b06c09901fc9c files/digest-portage-manpages-20070122 277
+SHA256 e684e8d5fa8df9771bd96fbce7d6289f9ab2d27462f88dc7d4998f09115682d6 files/digest-portage-manpages-20070122 277
