@@ -1,0 +1,3 @@
+MD5 92cd012360781b958519a096d1c3f1d8 portage-manpages-20070122.tar.bz2 22311
+RMD160 bdda3d0d12a7a1adea5c9ef89ea0c71d6ee1a9b9 portage-manpages-20070122.tar.bz2 22311
+SHA256 59471abc397ff36d4b751d56be92e188bc0418f43bb90109a907c6f7e412ddf7 portage-manpages-20070122.tar.bz2 22311
