@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/portage-manpages/portage-manpages-20060913.ebuild,v 1.3 2007/02/28 21:58:33 genstef Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/portage-manpages/portage-manpages-20070122.ebuild,v 1.2 2007/02/28 21:58:33 genstef Exp $
 
 EAPI="prefix"
 
@@ -17,5 +17,5 @@ DEPEND=""
 RDEPEND=""
 
 src_install() {
-	doman * || die
+	doman *.[0-9] || die
 }
