@@ -1,6 +1,12 @@
 # ChangeLog for app-portage/portage-manpages
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/portage-manpages/ChangeLog,v 1.9 2006/10/17 08:57:46 uberlord Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-portage/portage-manpages/ChangeLog,v 1.10 2007/01/22 05:54:01 vapier Exp $
+
+*portage-manpages-20070122 (22 Jan 2007)
+
+  22 Jan 2007; Mike Frysinger <vapier@gentoo.org>
+  +portage-manpages-20070122.ebuild:
+  Push out updates (mainly eutils.eclass).
 
   17 Oct 2006; Roy Marples <uberlord@gentoo.org>
   portage-manpages-20060913.ebuild:
